@@ -262,11 +262,13 @@ class player(xbmc.Player):
 
     def onPlayBackStopped(self):
         bookmarks().reset(self.currentTime, self.totalTime, self.name, self.year)
+        xbmc.executebuiltin('Container.Refresh')
 
 
     def onPlayBackEnded(self):
         self.libForPlayback()
         self.onPlayBackStopped()
+        xbmc.executebuiltin('Container.Refresh')
 
 
 class subtitles:
