@@ -20,7 +20,7 @@
         <setting id="lists.widget" type="enum" label="32329" lvalues="32302|32301" default="1" />
     </category>
     <category label="32330">
-        <setting id="hosts.mode" type="enum" label="32331" lvalues="32332|32333|32334" default="0" />
+        <setting id="hosts.mode" type="enum" label="32331" lvalues="32332|32333|32334" default="1" />
         <setting id="progress.dialog" type="enum" label="32335" lvalues="32336|32337" default="0" />
         <setting type="lsep" label="32338" />
         <setting id="hosts.quality" type="enum" label="32339" values="4K|1440p|1080p|720p|480p" default="0" />
@@ -50,6 +50,7 @@
         <setting id="provider.einthusan" type="bool" label="EINTHUSAN" default="true" />
         <setting id="provider.genvideo" type="bool" label="GENVIDEO" default="true" />
         <setting id="provider.gogoanime" type="bool" label="GOGOANIME" default="true" />
+        <setting id="provider.gostream" type="bool" label="GOSTREAM" default="true" />
         <setting id="provider.hevcfilm" type="bool" label="HEVCFILM" default="true" />
         <setting id="provider.kingmovies" type="bool" label="KINGMOVIES" default="true" />
         <setting id="provider.library" type="bool" label="LIBRARY" default="true" />
